# chip8-rs

./: Cargo.toml  README.md
src/: chip8.rs  lib.rs  main.rs
src/chip8/: cpu.rs  input.rs  memory.rs  output.rs  registers.rs  sprites.rs  timers.rs
web/: chip8.js  index.html
