[package]
name = "chip8-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "chip8-rs"
path = "src/main.rs"

[dependencies]
console_error_panic_hook = "0.1.7"
lazy_static = "1.4.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.92"
